# SCOUTPRO

./: .dockerignore  .env.production  .gitignore  .htaccess  .replit  .replit-deployment.toml  DEPLOY-INSTRUCTIONS.md  DEPLOYMENT-FIXES-COMPLETE.md  Dockerfile  PRODUCTION-DEPLOYMENT-CLEAN.md  PRODUCTION-DEPLOYMENT.md  PRODUCTION-VITE-FIX.md  README.md  SECURITY-ENHANCEMENTS.md  SECURITY.md  VITE-DEPLOYMENT-FIX.md  build-backend-only.js  deploy.sh  docker-compose-dev.yml  ecosystem.config.cjs  ecosystem.config.js  fix-npm-dependencies.sh  nginx-platinumscout.conf  package-lock.json  package-production.json  package.json  player_analysis_service.py  production-deploy-git.sh  production-deploy.sh  pyproject.toml  python_ml_service.sh  python_service_manager.py  replit.md  replit.static.toml  replit.toml  run_python_service.py  security-hardening-enhanced.sh  start_python_service.sh  static-deployment.config.js  tailwind.config.ts  (+1 more)
.upm/: store.json
client/: index.html
public/: manifest.json  sw.js
server/: admin-routes.ts  ai-agent.ts  ai-gateway.ts  ai-reports.ts  analytics-routes.ts  auth-routes.ts  automation-routes.ts  create-test-users.js  create-test-users.ts  data-validation-service.ts  db.ts  email-service.ts  enhanced-ai-routes.ts  enterprise-security.ts  external-data-service.ts  feature-gate-middleware.ts  independent-analysis-routes.ts  index.production.ts  index.ts  infrastructure-config.ts  player-analysis-routes.ts  player-import.ts  routes.ts  routing-adapter.ts  scalability-config.ts  security-compliance.ts  security-middleware.ts  sso-integration.ts  (+11 more)
(+110 files in other folders)
